# ukd-schedule--api

./: Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
src/: cache-middleware.ts  logger-middleware.ts  main.rs  main.ts  routes.ts  server.rs
src/api/: baseUrl.ts  getGroups.ts  getSchedule.ts  getSchedules.ts  getTeachers.ts
src/dto/: getScheduleDto.ts
src/schedule/: get_schedule.rs
src/utils/: ConvertWin1254.ts  FormatDate.ts  convertFromWin1254.ts  sendErrorResponse.ts
