[package]
name = "ukd-schedule--api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
encoding_rs = "0.8.32"
scraper = "0.14.0"

